--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "swiper": "^5.4.5",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.14",
-    "vue-lazyload": "^3.0.0-rc.2",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
@@ -31,6 +30,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-lazyload": "^1.3.3",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
